# ramadanPlanner-Backend

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  example.env  mypy.ini  pyproject.toml  requirements.txt  vercel.json
account/: admin.py  managers.py  middlewares.py  models.py  schemas.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_user_date_joined_user_is_active_user_is_staff.py
checklist/: admin.py  apps.py  enums.py  models.py  schemas.py  signals.py  views.py
checklist/migrations/: 0001_initial.py  0002_alter_quranchecklist_completed_value_and_more.py  0003_alter_quranchecklist_completed_value_and_more.py  0004_remove_quranchecklist_last_read_unit_and_more.py
common/: enums.py  exceptions.py  schemas.py  utils.py
config/: settings.py  urls.py  wsgi.py
content/: admin.py  enums.py  models.py  schemas.py  views.py
content/migrations/: 0001_initial.py
core/: middlewares.py
org/: admin.py  models.py
org/migrations/: 0001_initial.py
